--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ preload_image(alts[10].image);
 
 </div>
 
-<div id="credits"><strong>Sources:</strong> <a href="https://experience.arcgis.com/experience/332ebce3cff94179b3ef8f0dd635dace" target="_blank">PSEG/Arcgis.com</a>, OpenStreetMap | <strong>Graphics:</strong> Staff</div>
+<div id="credits">Note: Expected 150-foot right-of-way width not shown to scale. | <strong>Sources:</strong> <a href="https://experience.arcgis.com/experience/332ebce3cff94179b3ef8f0dd635dace" target="_blank">PSEG/Arcgis.com</a>, OpenStreetMap | <strong>Graphics:</strong> Staff</div>
     </div>
 </body>
 
