--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ img {
 #mapwrap {
     
     max-width: 520px;
-    height: 390px;
+    height: 415px;
 }
 
 
@@ -60,7 +60,7 @@ clear: both;
 }
 #mobilecontrols {
 display: block;
-padding: 15px 0 95px 0;
+padding: 15px 0 105px 0;
 }
 #mobilecontrols span {
     display: block;
@@ -75,7 +75,7 @@ padding: 15px 0 95px 0;
 font-size: 3.4em !important;
 }
 #mobilecontrols {
-padding: 15px 0 85px 0;
+padding: 15px 0 97px 0;
 }
 }
 @media screen and (min-width: 345px) {
@@ -83,7 +83,7 @@ padding: 15px 0 85px 0;
 font-size: 3.3em !important;
 }
 #mobilecontrols {
-padding: 15px 0 80px 0;
+padding: 15px 0 103px 0;
 }
 }
 
@@ -93,6 +93,9 @@ padding: 15px 0 80px 0;
     width: calc(8% - 1px);
 
 }
+#mobilecontrols {
+padding: 15px 0 90px 0;
+}
 }
 
 @media screen and (min-width: 375px) {
@@ -100,7 +103,7 @@ padding: 15px 0 80px 0;
 font-size: 3.15em !important;
 }
 #mobilecontrols {
-padding: 15px 0 70px 0;
+padding: 15px 0 81px 0;
 }
 }
 
@@ -112,7 +115,7 @@ padding: 15px 0 70px 0;
 font-size: 3em !important;
 }
 #mobilecontrols {
-padding: 10px 0 60px 0;
+padding: 10px 0 73px 0;
 }
 
 }
@@ -124,7 +127,7 @@ padding: 10px 0 60px 0;
 font-size: 2.7em !important;
 }
 #mobilecontrols {
-padding: 8px 0 53px 0;
+padding: 8px 0 65px 0;
 }
 
 }
@@ -141,7 +144,7 @@ padding: 8px 0 53px 0;
 font-size: 1.9em !important;
 }
 #mobilecontrols {
-padding: 5px 0 40px 0;
+padding: 5px 0 54px 0;
 }
 
 }
@@ -154,7 +157,7 @@ padding: 5px 0 40px 0;
 font-size: 1.67em !important;
 }
 #mobilecontrols {
-padding: 5px 0 32px 0;
+padding: 5px 0 42px 0;
 }
 
 }
@@ -165,7 +168,7 @@ padding: 5px 0 32px 0;
     display: none;
 }
 img {
-    margin: 5px 0 2px 0;
+    margin: 5px 0 17px 0;
 }
 }
 
@@ -409,7 +412,7 @@ preload_image(alts[10].image);
 
 </div>
 
-<div id="credits">Note: Expected 150-foot right-of-way width not shown to scale. | <strong>Sources:</strong> <a href="https://experience.arcgis.com/experience/332ebce3cff94179b3ef8f0dd635dace" target="_blank">PSEG/Arcgis.com</a>, OpenStreetMap | <strong>Graphics:</strong> Staff</div>
+<div id="credits">Note: Right-of-way widths not shown to scale. | <strong>Sources:</strong> <a href="https://experience.arcgis.com/experience/332ebce3cff94179b3ef8f0dd635dace" target="_blank">PSEG/Arcgis.com</a>, OpenStreetMap | <strong>Graphics:</strong> Staff</div>
     </div>
 </body>
 
